--- a/00-ProjectProposal.ipynb
+++ b/00-ProjectProposal.ipynb
@@ -51,10 +51,11 @@
     "> Analysis, Background research, Conceptualization, Data curation, Experimental investigation, Methodology, Project administration, Software, Visualization, Writing – original draft, Writing – review & editing\n",
     "\n",
     "Example team list and credits:\n",
-    "- Alice Anderson: Conceptualization, Data curation, Methodology, Writing - original draft\n",
-    "- Bob Barker:  Analysis, Software, Visualization\n",
-    "- Charlie Chang: Project administration, Software, Writing - review & editing\n",
-    "- Dani Delgado: Analysis, Background research, Visualization, Writing - original draft"
+    "- Scott Huang: \n",
+    "- Ye Teng: \n",
+    "- Cathy:\n",
+    "- Fei Liang:\n",
+    "- Rich: "
    ]
   },
   {
@@ -70,14 +71,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Instructions: REPLACE the contents of this cell with your research question\n",
-    "\n",
-    "-  Include a specific, clear data science question.\n",
-    "-  Make sure its clear what metrics/variables you need to answer the question \n",
-    "-  The questions needs to strongly suggest what analysis is appropriate (e.g, if its a prediction task or a statistical inference task )\n",
-    "\n",
-    "This question should be specific, answerable with data, and unambiguous. A general question with specific subquestions is permitted. When we read this we should know clearly what your project will be about.  This section shouldn't run more than 5 or 6 sentences.\n",
-    "\n"
+    "Which product attributes such as price, customer ratings, number of reviews, and brand—are most strongly associated with dietary supplement sales on e-commerce platforms?"
    ]
   },
   {
@@ -92,40 +86,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Dietary supplements are a growing part of the health and wellness market, and many consumers now buy products such as vitamins, protein powders, and probiotics through e-commerce platforms. Unlike prescription medications, dietary supplements are not strictly regulated before they are sold, which means consumers often rely on visible product information when making purchasing decisions.<a name=\"cite_ref-1\"></a>[<sup>1</sup>](#cite_note-1) Because of this, attributes such as price, brand reputation, and especially online reviews play an important role in shaping supplement sales online.\n",
     "\n",
-    "Instructions: REPLACE the contents of this cell with your work\n",
+    "Previous research on online shopping behavior has consistently shown that customer ratings and reviews have a strong influence on product sales. Chevalier and Mayzlin found that products with higher ratings and more positive reviews tend to sell better, particularly when consumers cannot easily evaluate product quality before purchase.<a name=\"cite_ref-2\"></a>[<sup>2</sup>](#cite_note-2) This highlights how social proof becomes more important when buyers face uncertainty, which is often the case for health-related products like dietary supplements.\n",
     "\n",
-    "- Include a general introduction to your topic\n",
-    "- Include explanation of what work has been done previously\n",
-    "- Include citations or links to previous work\n",
+    "Beyond reviews, brand reputation also plays a key role in consumer decision-making. Prior research suggests that in online marketplaces with many similar products, consumers often rely on brand identity and reputation as signals of quality and reliability.<a name=\"cite_ref-3\"></a>[<sup>3</sup>](#cite_note-3) This project builds on prior work by examining how price, customer ratings, number of reviews, and brand are associated with actual dietary supplement sales on e-commerce platforms, using observed sales data rather than self-reported preferences.\n",
+    "1. <a name=\"cite_note-1\"></a> [^](#cite_ref-1) U.S. Food & Drug Administration. Dietary Supplements.\n",
+    "https://www.fda.gov/food/dietary-supplements\n",
     "\n",
-    "This section will present the background and context of your topic and question in a few paragraphs. Include a general introduction to your topic and then describe what information you currently know about the topic after doing your initial research. Include references to other projects who have asked similar questions or approached similar problems. Explain what others have learned in their projects.\n",
+    "2. <a name=\"cite_note-2\"></a> [^](#cite_ref-2)Chevalier, J. A., & Mayzlin, D. (2006). The effect of word of mouth on sales: Online book reviews. Journal of Marketing Research, 43(3), 345–354. https://www.jstor.org/stable/30162409?seq=1 \n",
     "\n",
-    "Find some relevant prior work, and reference those sources, summarizing what each did and what they learned. Even if you think you have a totally novel question, find the most similar prior work that you can and discuss how it relates to your project.\n",
-    "\n",
-    "References can be primary research publications, but they need not be. Blogs, GitHub repositories, company websites, reputable news or magazine articles etc., are all viable references if they are relevant to your project. It may be very helpful to look for review papers in research publications; these surveys of a field can provide you with important domain expertise and make excellent citations.\n",
-    "\n",
-    "Do not just give us a couple of random citations.  These should be directly relevant. Depending on the needs this could\n",
-    "- fundamental things that are very important in the broad field (think textbook chapters or famous case studies)\n",
-    "- very similar projects to what you want to do\n",
-    "- primary research or review articles about techniques you will use or an obstacle you will face \n",
-    "\n",
-    "Generally if two possible citations exist, choose the one which seems more central to the field (has more citations or appears in a reputable source).\n",
-    "\n",
-    "Be aware that AI will make up citations and generally not necessarily pick out the most important ones.\n",
-    "\n",
-    "You are expected to have three to six paragraphs of background information here and a *minimum* of three relevant citations.  Use those citations in a way that it is clear which information comes from which reference. Don't just claim a bunch of stuff in the text without citation and then dump a bibliogrpahy at the end\n",
-    "\n",
-    " **Use inline citation through HTML footnotes to specify which references support which statements** \n",
-    "\n",
-    "For example: After government genocide in the 20th century, real birds were replaced with surveillance drones designed to look just like birds.<a name=\"cite_ref-1\"></a>[<sup>1</sup>](#cite_note-1) Use a minimum of 3 citations, but we prefer more.<a name=\"cite_ref-2\"></a>[<sup>2</sup>](#cite_note-2) You need enough to fully explain and back up important facts and methods. \n",
-    "\n",
-    "Note that if you click a footnote number in the paragraph above it will transport you to the proper entry in the footnotes list below.  And if you click the ^ in the footnote entry, it will return you to the place in the main text where the footnote is made.\n",
-    "\n",
-    "To understand the HTML here, `<a name=\"#...\"> </a>` is a tag that allows you produce a named reference for a given location.  Markdown has the construciton `[text with hyperlink](#named reference)` that will produce a clickable link that transports you the named reference.\n",
-    "\n",
-    "1. <a name=\"cite_note-1\"></a> [^](#cite_ref-1) Lorenz, T. (9 Dec 2021) Birds Aren’t Real, or Are They? Inside a Gen Z Conspiracy Theory. *The New York Times*. https://www.nytimes.com/2021/12/09/technology/birds-arent-real-gen-z-misinformation.html \n",
-    "2. <a name=\"cite_note-2\"></a> [^](#cite_ref-2) Also refs should be important to the background, not some randomly chosen vaguely related stuff. Include a web link if possible in refs as above.\n"
+    "3. <a name=\"cite_note-4\"></a> [^](#cite_ref-4) Clemons, E. K., Gao, G. G., & Hitt, L. M. (2006). When online reviews meet hyperdifferentiation. Journal of Management Information Systems, 23(2), 149–171.  https://www.tandfonline.com/doi/abs/10.2753/MIS0742-1222230207\n"
    ]
   },
   {
@@ -141,13 +112,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Instructions: REPLACE the contents of this cell with your hypothesis\n",
+    "We hypothesize that price, customer ratings, review count, and brand are significantly associated with dietary supplement sales. Specifically, we expect review count and average rating to be positively associated with sales, price to be negatively associated with sales, and sales to differ across brands. Among these attributes, we hypothesize that review count will exhibit the strongest positive association with sales. We define “sales” as either total units sold, revenue generated, or sales rank, depending on data availability.\n",
     "\n",
-    "- Put your hypothesis here, this is different than your question. This what you think the answer will be to the question you're asking\n",
-    "- Ensure that this hypothesis is clear to readers\n",
-    "- Explain why you think this will be the outcome (what was your thinking?)\n",
-    "\n",
-    "If you question is \"What is the association between X and Y\" then a hypothesis might be \"We predict a strong correlation between X and Y\" or you might predict no correlation or any other possible relationship. Briefly explain your thinking, referring to the background section as needed. (2-3 sentences)"
+    "We believe that consumer purchasing decisions on e-commerce platforms are strongly influenced by social proof and credibility. In particular, the number of reviews may serve as an indicator of product popularity and trustworthiness, making consumers more likely to purchase items that appear widely used or endorsed by others."
    ]
   },
   {
@@ -246,9 +213,15 @@
     "Read over the [COGS108 Team Policies](https://github.com/COGS108/Projects/blob/master/COGS108_TeamPolicies.md) individually. Then, include your group’s expectations of one another for successful completion of your COGS108 project below. Discuss and agree on what all of your expectations are. Discuss how your team will communicate throughout the quarter and consider how you will communicate respectfully should conflicts arise. By including each member’s name above and by adding their name to the submission, you are indicating that you have read the COGS108 Team Policies, accept your team’s expectations below, and have every intention to fulfill them. These expectations are for your team’s use and benefit — they won’t be graded for their details.\n",
     "\n",
     "* *Team Expectation 1*\n",
+    "* Our team will primarily communicate through WeChat for updates, questions, and storing documents and datasets.\n",
     "* *Team Expectation 2*\n",
+    "* We will assume that all feedback is well-intentioned and aimed at improving the project. Team members are encouraged to speak up if they disagree or have concerns.\n",
     "* *Team Expecation 3*\n",
-    "* ..."
+    "* All team members are expected to contribute equally across the entire project in terms of effort. If a member is struggling to complete a task, they are expected to notify the group as soon as possible. The team will work together to redistribute tasks if needed.\n",
+    "* *Team Expectation 4*\n",
+    "* If issues arise regarding participation or communication, we will first address them respectfully within the group through written or verbal communication. If a member continues to fail to meet expectations after being notified, we will follow course policy and escalate the issue to the professor.\n",
+    "* *Team Expectation 5*\n",
+    "* If the team cannot reach an agreement on a minor decision after discussion (e.g., formatting or visualization style), we will first attempt a majority vote. If a quick resolution is needed, we may use a neutral random decision method (such as a coin flip or random spinner) to ensure fairness and keep the project moving forward. Major decisions related to the dataset selection or analysis methods will require group agreement."
    ]
   },
   {
@@ -282,6 +255,13 @@
     "| 3/13  | 12 PM  | Complete analysis; Draft results/conclusion/discussion (Wasp)| Discuss/edit full project |\n",
     "| 3/20  | Before 11:59 PM  | NA | Turn in Final Project & Group Project Surveys |"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -300,7 +280,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.13"
+   "version": "3.11.9"
   },
   "vscode": {
    "interpreter": {
