Complete project proposal

--- a/00-ProjectProposal.ipynb
+++ b/00-ProjectProposal.ipynb
@@ -15,17 +15,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Instructions: REPLACE the contents of this cell with your team list and their contributions. Note that this will change over the course of the checkpoints\n",
-    "\n",
     "This is a modified [CRediT taxonomy of contributions](https://credit.niso.org). For each group member please list how they contributed to this project using these terms:\n",
     "> Analysis, Background research, Conceptualization, Data curation, Experimental investigation, Methodology, Project administration, Software, Visualization, Writing – original draft, Writing – review & editing\n",
     "\n",
     "Example team list and credits:\n",
-    "- Scott Huang: \n",
-    "- Ye Teng: \n",
-    "- Cathy:\n",
-    "- Fei Liang:\n",
-    "- Rich: "
+    "- Scott Huang: Analysis, Conceptualization, Writing – review & editing\n",
+    "- Ye Teng: Background research, Visualization, Writing – review & editing\n",
+    "- Cathy: Project Administration, Software, Writing - original draft\n",
+    "- Fei Liang: Experiential Investigation, Writing - original draft\n",
+    "- Rich: Data curation, Methodology, Writing – review & editing"
    ]
   },
   {
@@ -280,9 +278,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Instructions: REPLACE the contents of this cell with your work\n",
-    "  \n",
-    "Read over the [COGS108 Team Policies](https://github.com/COGS108/Projects/blob/master/COGS108_TeamPolicies.md) individually. Then, include your group’s expectations of one another for successful completion of your COGS108 project below. Discuss and agree on what all of your expectations are. Discuss how your team will communicate throughout the quarter and consider how you will communicate respectfully should conflicts arise. By including each member’s name above and by adding their name to the submission, you are indicating that you have read the COGS108 Team Policies, accept your team’s expectations below, and have every intention to fulfill them. These expectations are for your team’s use and benefit — they won’t be graded for their details.\n",
+    "  Read over the [COGS108 Team Policies](https://github.com/COGS108/Projects/blob/master/COGS108_TeamPolicies.md) individually. Then, include your group’s expectations of one another for successful completion of your COGS108 project below. Discuss and agree on what all of your expectations are. Discuss how your team will communicate throughout the quarter and consider how you will communicate respectfully should conflicts arise. By including each member’s name above and by adding their name to the submission, you are indicating that you have read the COGS108 Team Policies, accept your team’s expectations below, and have every intention to fulfill them. These expectations are for your team’s use and benefit — they won’t be graded for their details.\n",
     "\n",
     "* *Team Expectation 1*\n",
     "* Our team will primarily communicate through WeChat for updates, questions, and storing documents and datasets.\n",
@@ -309,31 +305,54 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Instructions: REPLACE the contents of this cell with your work\n",
+    "January 29, 6:30 PM\n",
+    "Completed before meeting: Reviewed an example project on fast food access and disease rates.\n",
+    "Discuss at meeting: Summarized the project; Discussed strengths, weaknesses, and limitations (multicollinearity, confounding, small sample size); Identified lessons to apply to our own project, including being transparent about limitations.\n",
     "\n",
-    "Specify your team's specific project timeline. An example timeline has been provided. Changes the dates, times, names, and details to fit your group's plan.\n",
+    "February 4 6:30PM\n",
+    "Completed before meeting: Review final project checklist and course requirements; Review and finalize the research question and variables.\n",
+    "Discuss at meeting: Confirm project scope and research question; Align on outcome variable (sales or sales rank) and predictor variables (price, ratings, number of reviews, brand); Assign initial roles.\n",
     "\n",
-    "If you think you will need any special resources or training outside what we have covered in COGS 108 to solve your problem, then your proposal should state these clearly. For example, if you have selected a problem that involves implementing multiple neural networks, please state this so we can make sure you know what you’re doing and so we can point you to resources you will need to implement your project. Note that you are not required to use outside methods.\n",
+    "February 9   6:30PM\n",
+    "Completed before meeting: Conduct background research on dietary supplements and ecommerce consumer behavior; Identify 1–2 relevant prior studies or articles.\n",
+    "Discuss at meeting: Discuss background context and prior work; Decide which sources to cite; Refine and finalize the hypothesis.\n",
     "\n",
+    "February 12 6:30PM\n",
+    "Completed before meeting: Identify and explore potential datasets; Review dataset features, size, and limitations.\n",
+    "Discuss at meeting: Finalize dataset selection; Discuss data limitations; Draft the Dataset(s) section.\n",
     "\n",
+    "February 16 6:30PM\n",
+    "Completed before meeting: Import dataset; Perform initial data cleaning (handle missing values, convert variable types).\n",
+    "Discuss at meeting: Review data cleaning decisions; Decide how to handle outliers; Confirm the dataset is clean and usable.\n",
     "\n",
-    "| Meeting Date  | Meeting Time| Completed Before Meeting  | Discuss at Meeting |\n",
-    "|---|---|---|---|\n",
-    "| 1/20  |  1 PM | Read & Think about COGS 108 expectations; brainstorm topics/questions  | Determine best form of communication; Discuss and decide on final project topic; discuss hypothesis; begin background research | \n",
-    "| 1/26  |  10 AM |  Do background research on topic | Discuss ideal dataset(s) and ethics; draft project proposal | \n",
-    "| 2/1  | 10 AM  | Edit, finalize, and submit proposal; Search for datasets  | Discuss Wrangling and possible analytical approaches; Assign group members to lead each specific part   |\n",
-    "| 2/14  | 6 PM  | Import & Wrangle Data (Ant Man); EDA (Hulk) | Review/Edit wrangling/EDA; Discuss Analysis Plan   |\n",
-    "| 2/23  | 12 PM  | Finalize wrangling/EDA; Begin Analysis (Iron Man; Thor) | Discuss/edit Analysis; Complete project check-in |\n",
-    "| 3/13  | 12 PM  | Complete analysis; Draft results/conclusion/discussion (Wasp)| Discuss/edit full project |\n",
-    "| 3/20  | Before 11:59 PM  | NA | Turn in Final Project & Group Project Surveys |"
+    "February 20 6:30PM\n",
+    "Completed before meeting: Conduct exploratory data analysis (EDA); Create preliminary visualizations showing relationships between product attributes and sales.\n",
+    "Discuss at meeting: Interpret EDA results; Decide which visualizations to include in the final project.\n",
+    "\n",
+    "February 25 6:30PM\n",
+    "Completed before meeting: Perform correlation and regression analyses; Save analysis outputs.\n",
+    "Discuss at meeting: Interpret analysis results; Discuss associations between variables; Emphasize correlation versus causation.\n",
+    "\n",
+    "March 2 6:30PM\n",
+    "Completed before meeting: Draft the Ethics and Bias section; Identify potential ethical concerns and sources of bias in the data.\n",
+    "Discuss at meeting: Review ethical considerations; Discuss how bias and limitations are addressed in the analysis.\n",
+    "\n",
+    "March 6 6:30PM\n",
+    "Completed before meeting: Draft the Conclusion and Discussion sections.\n",
+    "Discuss at meeting: Edit and refine conclusions; Ensure the research question is clearly answered.\n",
+    "\n",
+    "March 10 6:30PM\n",
+    "Completed before meeting: Combine all sections into a complete project notebook draft.\n",
+    "Discuss at meeting: Full project review; Edit for clarity, organization, and narrative flow.\n",
+    "\n",
+    "March 16 6:30PM\n",
+    "Completed before meeting: Prepare the project video script and select key visualizations.\n",
+    "Discuss at meeting: Practice and refine video explanation\n",
+    "\n",
+    "March 18 6:30PM\n",
+    "Completed before meeting: Final proofreading\n",
+    "Discuss at meeting: Submit Final Project and Group Project Survey."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
