Fill Data section for checkpoint

--- a/01-DataCheckpoint.ipynb
+++ b/01-DataCheckpoint.ipynb
@@ -126,28 +126,21 @@
    "source": [
     "### Data overview\n",
     "\n",
-    "Instructions: REPLACE the contents of this cell with descriptions of your actual datasets.\n",
+    "**Unit of observation:** Amazon product listing (ideally one row per ASIN).  \n",
+    "**Primary dataset:** Kaggle “Amazon Products Sales Dataset 42K+ Items – 2025” (product-level snapshot).  \n",
+    "**Outcome (DV):** sales-performance proxy such as BSR / rank (lower rank = better sales).  \n",
+    "**Key predictors (IVs):** price, rating_avg, review_count, discount (if available), brand, category/subcategory.  \n",
+    "**Controls / derived variables (as needed):** category dummies, log(review_count), and optionally price-per-serving if servings/size can be parsed.  \n",
+    "**Supplementary dataset (optional):** Amazon Reviews’23 (McAuley Lab) to validate or reconstruct rating_avg/review_count and optionally derive review-text features.\n",
     "\n",
-    "For each dataset include the following information\n",
-    "- Dataset #1\n",
-    "  - Dataset Name:\n",
-    "  - Link to the dataset:\n",
-    "  - Number of observations:\n",
-    "  - Number of variables:\n",
-    "  - Description of the variables most relevant to this project\n",
-    "  - Descriptions of any shortcomings this dataset has with repsect to the project\n",
-    "- Dataset #2 (if you have more than one!)\n",
-    "  - same as above\n",
-    "- etc\n",
+    "**Why these data fit the project:** They directly contain (or allow construction of) variables describing product attributes and popularity/sales proxy, enabling us to test relationships between attributes (pricing, ratings, brand/category) and sales performance.\n",
     "\n",
-    "Each dataset deserves either a set of bullet points as above or a few sentences if you prefer that method.\n",
-    "\n",
-    "If you plan to use multiple datasets, add a few sentences about how you plan to combine these datasets."
+    "**Main constraints:** outcome is a proxy (not true sales), coverage may be incomplete, and some columns may be noisy or missing; we will report missingness, apply cleaning rules, and run robustness checks.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,9 +155,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Overall Download Progress:   0%|          | 0/2 [00:00<?, ?it/s]\n",
+      "Downloading airline-safety.csv:   0%|          | 0.00/1.23k [00:00<?, ?B/s]\u001b[A\n",
+      "Overall Download Progress:  50%|█████     | 1/2 [00:00<00:00,  6.08it/s]   \u001b[A"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Successfully downloaded: airline-safety.csv\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Downloading bad-drivers.csv:   0%|          | 0.00/1.37k [00:00<?, ?B/s]\u001b[A\n",
+      "Overall Download Progress: 100%|██████████| 2/2 [00:00<00:00,  9.89it/s]\u001b[A"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Successfully downloaded: bad-drivers.csv\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Setup code -- this only needs to be run once after cloning the repo!\n",
     "# this code downloads the data from its source to the `data/00-raw/` directory\n",
@@ -197,23 +230,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Dataset #1 \n",
+    "## Dataset #1: Amazon Products Sales Dataset (42K+ Items, 2025) — Kaggle\n",
     "\n",
-    "Instructions: \n",
-    "1. Change the header from Dataset #1 to something more descriptive of the dataset\n",
-    "2. Write a few paragraphs about this dataset. Make sure to cover\n",
-    "   1. Describe the important metrics, what units they are in, and giv some sense of what they mean.  For example \"Fasting blood glucose in units of mg glucose per deciliter of blood.  Normal values for healthy individuals range from 70 to 100 mg/dL.  Values 100-125 are prediabetic and values >125mg/dL indicate diabetes. Values <70 indicate hypoglycemia. Fasting idicates the patient hasn't eaten in the last 8 hours.  If blood glucose is >250 or <50 at any time (regardless of the time of last meal) the patient's life may be in immediate danger\"\n",
-    "   2. If there are any major concerns with the dataset, describe them. For example \"Dataset is composed of people who are serious enough about eating healthy that they voluntarily downloaded an app dedicated to tracking their eating patterns. This sample is likely biased because of that self-selection. These people own smartphones and may be healthier and may have more disposable income than the average person.  Those who voluntarily log conscientiously and for long amounts of time are also likely even more interested in health than those who download the app and only log a bit before getting tired of it\"\n",
-    "3. Use the cell below to \n",
-    "    1. load the dataset \n",
-    "    2. make the dataset tidy or demonstrate that it was already tidy\n",
-    "    3. demonstrate the size of the dataset\n",
-    "    4. find out how much data is missing, where its missing, and if its missing at random or seems to have any systematic relationships in its missingness\n",
-    "    5. find and flag any outliers or suspicious entries\n",
-    "    6. clean the data or demonstrate that it was already clean.  You may choose how to deal with missingness (dropna of fillna... how='any' or 'all') and you should justify your choice in some way\n",
-    "    7. You will load raw data from `data/00-raw/`, you will (optionally) write intermediate stages of your work to `data/01-interim` and you will write the final fully wrangled version of your data to `data/02-processed`\n",
-    "4. Optionally you can also show some summary statistics for variables that you think are important to the project\n",
-    "5. Feel free to add more cells here if that's helpful for you\n"
+    "**Dataset name / source:** “Amazon Products Sales Dataset 42K+ Items – 2025” (Kaggle)  \n",
+    "**Access method:** Download CSV from Kaggle (record dataset version + download date in our repo)\n",
+    "\n",
+    "**What it contains (high-level):**  \n",
+    "This dataset provides a product-level snapshot for ~42K Amazon listings. While exact column names may vary by version, fields typically include product title/name, category/subcategory, brand, current price (and sometimes list price/discount), average rating, review count, and one or more ranking / “bestseller” indicators that can be used as a sales-performance proxy.\n",
+    "\n",
+    "**Planned variables (from this dataset):**\n",
+    "- **Outcome (sales performance proxy):** BSR / ranking field (lower is better), or a closely related ranking/bestseller indicator if BSR is not present.\n",
+    "- **Predictors:** price, discount (if available), rating_avg, review_count, brand, category/subcategory.\n",
+    "- **Potential controls / derived variables:** standardized category dummies; log(review_count); price-per-serving (only if size/servings can be parsed).\n",
+    "\n",
+    "**Unit of observation:**  \n",
+    "Product listing (ideally one row per ASIN). If duplicates exist, we will deduplicate by ASIN, or by (title, brand) rules when ASIN is unavailable.\n",
+    "\n",
+    "**Known/expected issues & cleaning (plan):**\n",
+    "- **Price formatting:** prices often include currency symbols/commas → strip and convert to numeric.\n",
+    "- **Missingness:** drop rows missing key fields (outcome + core predictors) or impute only when appropriate; report missingness summary.\n",
+    "- **Outliers:** inspect extreme price/rank values; use robust methods and/or winsorize/clip for sensitivity checks.\n",
+    "- **Duplicates:** remove duplicates by ASIN or (title, brand) + category where needed.\n",
+    "- **Category filtering (project-specific):** filter to supplement/health-related categories if our research question focuses on supplements.\n"
    ]
   },
   {
@@ -230,13 +268,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Dataset #2 \n",
+    "## Dataset #2 (optional): Amazon Reviews’23 — McAuley Lab (UCSD)\n",
     "\n",
-    "See instructions above for Dataset #1.  Feel free to keep adding as many more datasets as you need.  Put each new dataset in its own section just like these. \n",
+    "**Dataset name / source:** Amazon Reviews’23 (McAuley Lab, UCSD)  \n",
+    "**Access method:** Use the public release / Hugging Face dataset card (download only relevant category subsets)\n",
     "\n",
-    "Lastly if you do have multiple datasets, add another section where you demonstrate how you will join, align, cross-reference or whatever to combine data from the different datasets\n",
+    "**What it contains (high-level):**  \n",
+    "Large-scale review-level data including star ratings, review text, timestamps, and product identifiers (e.g., ASIN). Depending on the subset, it may also include product metadata files (category, title, brand, etc.).\n",
     "\n",
-    "Please note that you can always keep adding more datasets in the future if these datasets you turn in for the checkpoint aren't sufficient.  The goal here is demonstrate that you can obtain and wrangle data.  You are not tied down to only use what you turn in right now."
+    "**How we would use it (if needed):**\n",
+    "- Validate or reconstruct **rating_avg** and **review_count** for products in our analysis using review-level aggregation.\n",
+    "- Optionally derive review-text features (e.g., sentiment/topic indicators) if that supports our research question.\n",
+    "\n",
+    "**Join key:**  \n",
+    "ASIN (preferred). If Dataset #1 does not include ASIN, we will avoid unreliable fuzzy matching unless absolutely necessary.\n",
+    "\n",
+    "**Known limitations:**\n",
+    "- Very large files → restrict to relevant categories and/or a manageable sample.\n",
+    "- Coverage mismatch vs Kaggle snapshot → treat as supplementary rather than primary.\n"
    ]
   },
   {
@@ -246,6 +295,31 @@
    "outputs": [],
    "source": [
     "## YOUR CODE TO LOAD/CLEAN/TIDY/WRANGLE THE DATA GOES HERE\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Data access & reproducibility\n",
+    "\n",
+    "We will download the Kaggle dataset as a CSV file and store it in our project repository (or a shared drive) with a clear filename that includes the dataset version and download date. If we use Amazon Reviews’23, we will document which category subset(s) we downloaded and the date/version of the release. We will keep all cleaning steps in a reproducible notebook/script, and we will record any filtering decisions (e.g., category filters) so our results can be replicated.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### References / access (last checked 2026-02-18)\n",
+    "\n",
+    "- Kaggle: **Amazon Products Sales Dataset 42K+ Items – 2025**  \n",
+    "  https://www.kaggle.com/datasets/ikramshah512/amazon-products-sales-dataset-42k-items-2025\n",
+    "\n",
+    "- **Amazon Reviews’23 (McAuley Lab, UCSD)** project page  \n",
+    "  https://amazon-reviews-2023.github.io/\n",
+    "\n",
+    "- Hugging Face dataset card: **McAuley-Lab / Amazon-Reviews-2023**  \n",
+    "  https://huggingface.co/datasets/McAuley-Lab/Amazon-Reviews-2023\n"
    ]
   },
   {
