--- a/01-DataCheckpoint.ipynb
+++ b/01-DataCheckpoint.ipynb
@@ -64,7 +64,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Which product attributes such as price, customer ratings, number of reviews, and brand—are most strongly associated with dietary supplement sales on e-commerce platforms?"
+    "Which product attributes, including price, customer ratings, number of reviews, and brand, are most strongly associated with dietary supplement sales on Amazon, as measured by sales rank or estimated units sold?"
    ]
   },
   {
@@ -106,9 +106,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We hypothesize that price, customer ratings, review count, and brand are significantly associated with dietary supplement sales. Specifically, we expect review count and average rating to be positively associated with sales, price to be negatively associated with sales, and sales to differ across brands. Among these attributes, we hypothesize that review count will exhibit the strongest positive association with sales. We define “sales” as either total units sold, revenue generated, or sales rank, depending on data availability.\n",
+    "We hypothesize that price, customer ratings, review count, and brand are significantly associated with dietary supplement sales on Amazon. Specifically, we expect review count and average rating to be positively associated with sales, price to be negatively associated with sales, and sales to differ across brands. Among these attributes, we hypothesize that review count will exhibit the strongest positive association with sales. Sales are defined using either sales rank or estimated units sold, depending on data availability.\n",
     "\n",
-    "We believe that consumer purchasing decisions on e-commerce platforms are strongly influenced by social proof and credibility. In particular, the number of reviews may serve as an indicator of product popularity and trustworthiness, making consumers more likely to purchase items that appear widely used or endorsed by others."
+    "We believe that consumer purchasing decisions on e-commerce platforms are strongly influenced by social proof and perceived credibility, particularly for health-related products where quality cannot be easily evaluated prior to purchase. Prior research has shown that online reviews and ratings play a significant role in shaping consumer behavior by reducing uncertainty. In this context, the number of reviews may serve as an indicator of product popularity and trustworthiness, making it more strongly associated with sales than price or brand alone."
    ]
   },
   {
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -164,7 +164,7 @@
      "text": [
       "Overall Download Progress:   0%|          | 0/2 [00:00<?, ?it/s]\n",
       "Downloading airline-safety.csv:   0%|          | 0.00/1.23k [00:00<?, ?B/s]\u001b[A\n",
-      "Overall Download Progress:  50%|█████     | 1/2 [00:00<00:00,  6.08it/s]   \u001b[A"
+      "Overall Download Progress:  50%|█████     | 1/2 [00:00<00:00,  6.32it/s]   \u001b[A"
      ]
     },
     {
@@ -180,7 +180,7 @@
      "text": [
       "\n",
       "Downloading bad-drivers.csv:   0%|          | 0.00/1.37k [00:00<?, ?B/s]\u001b[A\n",
-      "Overall Download Progress: 100%|██████████| 2/2 [00:00<00:00,  9.89it/s]\u001b[A"
+      "Overall Download Progress: 100%|██████████| 2/2 [00:00<00:00,  6.44it/s]\u001b[A"
      ]
     },
     {
@@ -449,16 +449,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* *Team Expectation 1*\n",
-    "* Our team will primarily communicate through WeChat for updates, questions, and storing documents and datasets.\n",
-    "* *Team Expectation 2*\n",
-    "* We will assume that all feedback is well-intentioned and aimed at improving the project. Team members are encouraged to speak up if they disagree or have concerns.\n",
-    "* *Team Expecation 3*\n",
-    "* All team members are expected to contribute equally across the entire project in terms of effort. If a member is struggling to complete a task, they are expected to notify the group as soon as possible. The team will work together to redistribute tasks if needed.\n",
-    "* *Team Expectation 4*\n",
-    "* If issues arise regarding participation or communication, we will first address them respectfully within the group through written or verbal communication. If a member continues to fail to meet expectations after being notified, we will follow course policy and escalate the issue to the professor.\n",
-    "* *Team Expectation 5*\n",
-    "* If the team cannot reach an agreement on a minor decision after discussion (e.g., formatting or visualization style), we will first attempt a majority vote. If a quick resolution is needed, we may use a neutral random decision method (such as a coin flip or random spinner) to ensure fairness and keep the project moving forward. Major decisions related to the dataset selection or analysis methods will require group agreement."
+    "* *Team Expectation 1: Communication*\n",
+    "  \n",
+    "  Our team will primarily communicate through WeChat for updates, questions, and storing documents and datasets. Team members are expected to respond to messages within a reasonable timeframe and notify the group in advance if they will be unavailable.\n",
+    "  \n",
+    "* *Team Expectation 2: Feedback*\n",
+    "\n",
+    "  We will assume that all feedback is well-intentioned and aimed at improving the project. Team members are encouraged to speak up if they disagree or have concerns. We will approach feedback with openness and assume good intent from one another.\n",
+    "\n",
+    "* *Team Expectation 3: Contribution*\n",
+    "\n",
+    "  \n",
+    "  All team members are expected to contribute equally across the entire project in terms of effort. If a member is struggling to complete a task, they are expected to notify the group as soon as possible. The team will work together to redistribute tasks if needed.\n",
+    "\n",
+    "* *Team Expectation 4: Participation*\n",
+    "\n",
+    "  \n",
+    "  If issues arise regarding participation or communication, we will first address them respectfully within the group through written or verbal communication. If a member continues to fail to meet expectations after being notified, we will follow course policy and escalate the issue to the professor.\n",
+    "\n",
+    "* *Team Expectation 5: Agreement*\n",
+    "\n",
+    "  \n",
+    "    If the team cannot reach an agreement on a minor decision after discussion (e.g., formatting or visualization style), we will first attempt a majority vote. If a quick resolution is needed, we may use a neutral random decision method (such as a coin flip or random spinner) to ensure fairness and keep the project moving forward. Major decisions related to the dataset selection or analysis methods will require group agreement."
    ]
   },
   {
